upload some baselines

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -481,349 +481,78 @@
             "name": "eval_meta_maps.py",
             "type": "python",
             "request": "launch",
-            "module": "baselines.eval_meta_maps",
+            "module": "baselines.rwa.eval_meta_maps",
             "console": "integratedTerminal",
         },
         {
             "name": "eval_worldpop_maps.py",
             "type": "python",
             "request": "launch",
-            "module": "baselines.eval_worldpop_maps",
+            "module": "baselines.rwa.eval_worldpop_maps",
             "console": "integratedTerminal",
         },
         {
             "name": "eval_POMELOv1_maps.py",
             "type": "python",
             "request": "launch",
-            "module": "baselines.eval_pomelo_maps",
+            "module": "baselines.rwa.eval_pomelo_maps",
             "console": "integratedTerminal",
         },
         {
-            "name": "eval_ghs_maps.py",
+            "name": "eval_ghs_maps.py, RWA",
             "type": "python",
             "request": "launch",
-            "module": "baselines.eval_ghs_maps",
+            "module": "baselines.rwa.eval_ghs_maps",
             "console": "integratedTerminal",
         },
         {
-            "name": "eval_dda_adj_maps.py",
+            "name": "eval_ghs_maps.py, PRI",
             "type": "python",
             "request": "launch",
-            "module": "baselines.eval_dda_adj_maps",
+            "module": "baselines.pri.eval_ghs_maps",
             "console": "integratedTerminal",
         },
         {
-            "name": "eval_ours_adj.py",
+            "name": "eval_ghs_maps.py, CHE",
             "type": "python",
             "request": "launch",
-            "module": "baselines.eval_ours_adj",
+            "module": "baselines.che.eval_ghs_maps",
             "console": "integratedTerminal",
         },
         {
-            "name": "train, smp, DANN",
+            "name": "eval_dda_adj_maps.py, RWA",
             "type": "python",
             "request": "launch",
-            "program": "run_train.py",
+            "module": "baselines.rwa.eval_dda_adj_maps",
             "console": "integratedTerminal",
-            "justMyCode": true,
-            "args": [
-                "--no-osm",
-                "--satmode",
-                // "--max_samples", "5000",
-                "--num_epochs",
-                "100",
-                "--lam_builtmask",
-                "0.0",
-                "--batch_size",
-                "384",
-                "--lr_step",
-                "10",
-                "-lr",
-                "1e-4",
-                "--lr_step",
-                "10",
-                // "--in_memory"
-                "--lr_gamma",
-                "0.75",
-                "--model",
-                "JacobsUNet",
-                "--feature_extractor",
-                "vgg11",
-                // "-S1",
-                // "--loss", "log_mse_loss", "l1_loss",
-                "--loss",
-                "l1_loss",
-                "--lam",
-                "1",
-                "--lam_adv",
-                "1.0",
-                // "-S1",
-                "-S2",
-                "--feature_dim",
-                "16",
-                "--random_season",
-                "--target_regions",
-                "pri2017",
-                "--adversarial",
-                "--excludeZH",
-                "--classifier",
-                "v7"
-            ]
         },
         {
-            "name": "train, smp, jacobs, debug",
+            "name": "eval_dda_adj_maps.py, PRI",
             "type": "python",
             "request": "launch",
-            "program": "run_train.py",
+            "module": "baselines.pri.eval_dda_adj_maps",
             "console": "integratedTerminal",
-            "justMyCode": true,
-            "args": [
-                "-o",
-                "-s",
-                // "--max_samples", "20000",
-                "-e",
-                "200",
-                "-b",
-                "128",
-                "-lr",
-                "1e-4",
-                "--model", "JacobsUNet",
-                // "1e-4",
-                "-l",
-                // "log_l1_aug_loss",
-                // "log_l1_loss",
-                "l1_loss",
-                // "log_l1_loss",
-                // "gaussian_nll",
-                // "laplacian_nll",
-                "--merge_aug", "2",
-                "-la",
-                "1.0",
-                // "0.1",
-                "-dw","3",
-                // "-dw2","3",
-                "-S2",
-                "-S1",
-                // "-NIR",
-                "-f",
-                "16",
-                "-rse",
-                "-treg",
-                "pricp2",
-                // "-ladv", "0.01",
-                "-exZH",
-                "--val", "1",
-                "--lr_step", "5",
-                "--lr_gamma", "0.75",
-                "--full_aug",
-                // "--CORAL",
-                // "--lam_coral", "10.0",
-                "--num_workers", "6",
-                // "--useallfeatures",
-                // "--lam_coral", "1.0",
-                // "-adv", 
-                // "-ladv", "0.01",
-                // "--classif", "v8",
-                // "--MMD",
-                // "--lam_mmd", "10.0",
-            ]
         },
         {
-            "name": "train, boostUNet, debug",
+            "name": "eval_dda_adj_maps.py, CHE",
             "type": "python",
             "request": "launch",
-            "program": "run_train.py",
+            "module": "baselines.che.eval_dda_adj_maps",
             "console": "integratedTerminal",
-            "justMyCode": false,
-            "args": [
-                "-o",
-                "-s",
-                // "--max_samples", "1000",
-                "-e",
-                "200",
-                "-b",
-                "128",
-                "-lr",
-                // "1e-5",
-                "1e-5",
-                // "3e-6",
-                "--model", "BoostUNet",
-                // "--model", "JacobsUNet",
-                // "1e-4",
-                "-l",
-                "log_l1_aug_loss",
-                // "l1_aug_loss",
-                // "log_l1_loss",
-                // "l1_loss",
-                // "log_l1_loss",
-                // "gaussian_nll",
-                // "laplacian_nll",
-                "--merge_aug", "2",
-                "-la",
-                "1.0",
-                // "0.1",
-                "-dw","4",
-                "-dw2","1",
-                "-S2",
-                "-S1",
-                // "-NIR",
-                "-f",
-                "16",
-                "-rse",
-                "-treg",
-                "pricp2",
-                "rwa",
-                // "-ladv", "0.01",
-                "-exZH",
-                "--val", "1",
-                "--lr_step", "5",
-                "--lr_gamma", "0.75",
-                "--full_aug",
-                // "--CORAL",
-                // "--lam_coral", "10.0",
-                "--num_workers", "6",
-                // "--useallfeatures",
-                // "--lam_coral", "1.0",
-                // "-adv", 
-                // "-ladv", "0.01",
-                // "--classif", "v8",
-                // "--MMD",
-                // "--lam_mmd", "10.0",
-                "--seed", "1612",
-                "-gc", "0.001",
-                // "--eu2rwa"
-                // "--lam_raw", "0.3.",
-                // "--occupancymodel",
-                // "--stochasticWA"
-            ]
         },
         {
-            "name": "train, boostUNet, debug, CyCADA,...",
+            "name": "eval_ours_adj.py, RWA",
             "type": "python",
             "request": "launch",
-            "program": "run_train.py",
+            "module": "baselines.rwa.eval_ours_adj",
             "console": "integratedTerminal",
-            "justMyCode": false,
-            "args": [
-                "-o",
-                "-s",
-                "--max_samples", "200",
-                "-e",
-                "200",
-                "-b",
-                "6",
-                "-lr", 
-                "1e-5", 
-                "--model", "BoostUNet",  
-                "-l",
-                "log_l1_aug_loss", 
-                "--merge_aug", "2",
-                "-la",
-                "1.0",
-                // "0.1",
-                "-dw","2",
-                "-dw2","4",
-                "-S2",
-                "-S1",
-                // "-NIR",
-                "-f",
-                "16",
-                "-rse",
-                "-treg",
-                // "pricp2",
-                "rwa", 
-                "-exZH",
-                "--val", "1",
-                "--lr_step", "5",
-                "--lr_gamma", "0.75",
-                "--full_aug",
-                "--num_workers", "6",
-                // "--useallfeatures",
-                // "-adv", 
-                // "-ladv", "0.001",
-                // "--classif", "v8",
-                "--seed", "1612",
-                "-gc", "0.001",
-                "--CyCADA",
-                "--CyCADASourcecheckpoint", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_905_626/best_model.pth",
-                "--CyCADAGANcheckpoint", "eu2rwa_cycleganFreeze2",
-                "--lam_selfsupervised_consistency", "1.0",
-                // "--lam_selfsupervised_consistency", "0.0",
-                "--lam_targetconsistency", "1.0",
-                // "--lam_targetconsistency", "0.0",
-                "--lambda_consistency_fake_B", "1.0",
-                "--lambda_consistency_real_B", "100.0",
-                // "--lambda_popB", "1.0",
-                "--lambda_popB", "10.0",
-                "--CyCADAnetG", "resnet_6blocks",
-                // "--GANonly",
-                // "--CyCADAcontinue", 
-                // "--eu2rwa" 
-            ]
         },
         {
-            "name": "train, boostUNet_4_1, debug, CyCADA,...",
+            "name": "eval_ours_adj.py, PRI",
             "type": "python",
             "request": "launch",
-            "program": "run_train.py",
+            "module": "baselines.pri.eval_ours_adj",
             "console": "integratedTerminal",
-            "justMyCode": false,
-            "args": [
-                "-o",
-                "-s",
-                // "--max_samples", "200",
-                "-e",
-                "200",
-                "-b",
-                "128",
-                "-lr", 
-                "1e-5", 
-                "--model", "BoostUNet",  
-                "-l",
-                "log_l1_aug_loss", 
-                "--merge_aug", "2",
-                "-la",
-                "1.0",
-                // "0.1",
-                "-dw","4",
-                "-dw2","1",
-                "-S2",
-                "-S1",
-                // "-NIR",
-                "-f",
-                "16",
-                "-rse",
-                "-treg",
-                // "pricp2",
-                "rwa", 
-                "-exZH",
-                "--val", "1",
-                "--lr_step", "5",
-                "--lr_gamma", "0.75",
-                "--full_aug",
-                "--num_workers", "6",
-                // "--useallfeatures",
-                // "-adv", 
-                // "-ladv", "0.001",
-                // "--classif", "v9_CyCADA",
-                "--seed", "1612",
-                "-gc", "0.001",
-                // "--CyCADA",
-                "--CyCADASourcecheckpoint", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1110_933/last_model.pth",
-                "--CyCADAGANcheckpoint", "eu2rwa_cycleganFreeze2",
-                "--lam_selfsupervised_consistency", "10000.0",
-                // "--lam_selfsupervised_consistency", "0.0",
-                "--lam_targetconsistency", "10000.0",
-                // "--lam_targetconsistency", "0.0",
-                "--lambda_consistency_fake_B", "10000.0",
-                "--lambda_consistency_real_B", "10000.0",
-                // "--lambda_popB", "1.0",
-                "--lambda_popB", "10000.0",
-                "--CyCADAnetG", "resnet_6blocks",
-                // "--GANonly",
-                // "--CyCADAcontinue", 
-                // "--eu2rwa" 
-            ]
         },
         {
             "name": "train, boostUNet_4_1, weak_train, uga&rwa -> rwa",
