upload code with stability fix for switzerland, also more efficient

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -478,10 +478,17 @@
             "console": "integratedTerminal"
         },
         {
-            "name": "eval_meta_maps.py",
+            "name": "eval_meta_maps.py, RWA",
             "type": "python",
             "request": "launch",
             "module": "baselines.rwa.eval_meta_maps",
+            "console": "integratedTerminal",
+        },
+        {
+            "name": "eval_meta_maps.py, CHE",
+            "type": "python",
+            "request": "launch",
+            "module": "baselines.che.eval_meta_maps",
             "console": "integratedTerminal",
         },
         {
@@ -499,10 +506,17 @@
             "console": "integratedTerminal",
         },
         {
-            "name": "eval_POMELOv1_maps.py",
+            "name": "eval_POMELOv1_maps.py, RWA",
             "type": "python",
             "request": "launch",
             "module": "baselines.rwa.eval_pomelo_maps",
+            "console": "integratedTerminal",
+        },
+        {
+            "name": "eval_POMELOv1_maps.py, CHE",
+            "type": "python",
+            "request": "launch",
+            "module": "baselines.che.eval_pomelo_maps",
             "console": "integratedTerminal",
         },
         {
@@ -709,15 +723,12 @@
                 "-b", "16",
                 "-lr", "1e-4", 
                 "--model", "POMELO_module", 
-                "--head", "v3",
-                // "--feature_extractor", "vgg16",
-                // "--feature_extractor", "DDA", 
-                // "-l", "log_l1_loss", "L1reg", 
+                "--head", "v3", 
+                "--grouped",
                 "-l", "log_l1_loss",
                 // "-la", "1.0", "1.0",
                 "-la", "1.0",
-                "-esr2", "0.001",
-                // "--lam_raw", "0.1",
+                "-esr2", "0.1", 
                 "-dw","2", 
                 "-S2",
                 "-NIR",
@@ -742,8 +753,7 @@
                 "-gc", "0.01",
                 // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1577_622/last_model.pth",
                 "--supmode", "weaksup",
-                "--lam_weak", "100",
-                // "--supmode", "unsup",
+                "--lam_weak", "100", 
                 "--nomain",
                 // "--weak_merge_aug",
                 // "--max_weak_samples", "2",
@@ -1139,7 +1149,7 @@
                 "--num_workers", "6", 
                 "--seed", "1612",
                 "-gc", "0.01",
-                "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1775_557/last_model.pth",
+                // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1775_557/last_model.pth",
                 "--supmode", "weaksup",
                 "--lam_weak", "100",
                 // "--supmode", "unsup",
@@ -1255,17 +1265,16 @@
             "args": [
                 "-o",
                 "-s",
-                // "--max_samples", "200",
                 "-e",   "100",
                 "-b", "16",
-                "-lr", "1e-3", 
+                "-lr", "1e-4", 
                 "--model", "POMELO_module",  
                 "--head", "v3",
                 // "-l", "log_l1_loss", "L1reg", 
                 "-l", "log_l1_loss",
                 // "-la", "1.0", "0.01",
                 "-la", "1.0",
-                "-esr2", "0.01",
+                "-esr2", "0.1",
                 "-dw","2",
                 "-S2",
                 "-NIR",
@@ -1293,14 +1302,14 @@
                 // "--supmode", "unsup",
                 "--nomain",
                 // "--weak_merge_aug",
-                // "--max_weak_samples", "2",
+                // "--max_weak_samples", "10",
                 "--val_every_n_epochs", "1",
                 // "--test_every_i_steps", "50",
                 // "--val_every_n_epochs", "100",
                 // "--weak_batch_size", "4",
                 "--weak_batch_size", "1",
                 "--occupancymodel",
-                // "--buildinginput",
+                "--buildinginput",
                 // "--segmentationinput",
                 "--useposembedding",
                 "--weightdecay_pos", "0.0",
