sparse convolutions as a default now

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -767,6 +767,7 @@
                 // "--segmentationinput",
                 "--useposembedding",
                 "--weightdecay_pos", "0.0",
+                "--weightdecay", "0.01",
                 "--sentinelbuildings",
                 "--train_level", "coarse",
                 // "-r77",
@@ -1043,70 +1044,6 @@
             ]
         },
         {
-            "name": "train, Stage 3, rwa",
-            "type": "python",
-            "request": "launch",
-            "program": "run_train.py",
-            "console": "integratedTerminal",
-            "justMyCode": false,
-            "args": [
-                "-o",
-                "-s",
-                // "--max_samples", "200",
-                "-e",   "150",
-                "-b", "16",
-                "-lr", "1e-3", 
-                "--model", "POMELO_module",  
-                // "-l", "log_l1_loss", "L1reg", 
-                "-l", "log_l1_loss",
-                // "-la", "1.0", "0.01",
-                "-la", "1.0",
-                "-dw","1",
-                "-S2",
-                "-NIR",
-                "-S1",
-                "-f",
-                // "16",
-                "8",
-                // "--dilation", "2",
-                "-rse",
-                "-treg", "rwa",
-                //"-treg", "pricp2",
-                "-tregtrain", "rwa",
-                "-exZH",
-                "-val", "1",
-                "--lr_step", "5",
-                "--lr_gamma", "0.5",
-                // "--lr_gamma", "0.75",
-                "--full_aug",
-                "--num_workers", "6", 
-                "--seed", "1612",
-                "-gc", "0.01",
-                // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1110_933/last_model.pth",
-                "--parent", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1526_321/",
-                "--supmode", "weaksup",
-                "--lam_weak", "100",
-                // "--supmode", "unsup",
-                "--nomain",
-                // "--weak_merge_aug",
-                // "--max_weak_samples", "2",
-                "--val_every_n_epochs", "1",
-                // "--test_every_i_steps", "50",
-                // "--val_every_n_epochs", "100",
-                // "--weak_batch_size", "4",
-                "--weak_batch_size", "1",
-                "--occupancymodel",
-                // "--buildinginput",
-                // "--segmentationinput",
-                "--useposembedding",
-                "--sentinelbuildings",
-                "--weightdecay_pos", "0.0",
-                "-r77",
-                "--pretrained",
-                "--gradientaccumulation",
-            ]
-        },
-        {
             "name": "train, Stage 1, pri",
             "type": "python",
             "request": "launch",
@@ -1166,6 +1103,7 @@
                 // "--segmentationinput",
                 "--useposembedding",
                 "--weightdecay_pos", "0.0",
+                "--weightdecay", "0.0",
                 // "--val_every_i_steps", "5000",
                 "--sentinelbuildings",
                 "--buildinginput",
