grouped convolutions for stage 3

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -576,139 +576,6 @@
             "console": "integratedTerminal",
         },
         {
-            "name": "train, boostUNet_4_1, weak_train, uga&rwa -> rwa",
-            "type": "python",
-            "request": "launch",
-            "program": "run_train.py",
-            "console": "integratedTerminal",
-            "justMyCode": false,
-            "args": [
-                "-o",
-                "-s",
-                // "--max_samples", "200",
-                "-e", "200",
-                "-b", "16",
-                "-lr",   "1e-5", 
-                "--model", "BoostUNet",  
-                // "--model", "JacobsUNet",  
-                "-l",  "log_l1_loss", "L1reg",  
-                "-la", "1.0", "0.01",
-                "-dw","2",
-                "-dw2","2",
-                "-S2",
-                "-S1",
-                "-NIR",
-                "-f",
-                // "16",
-                "8",
-                // "--dilation", "2",
-                "-r77",
-                "-rse",
-                "-treg", "pricp2", "rwa",
-                // "rwa", 
-                "-tregtrain", "uga", "rwa",
-                "-exZH",
-                "-val", "1",
-                "--lr_step", "5",
-                // "--lr_gamma", "0.5",
-                "--lr_gamma", "0.75",
-                "--full_aug",
-                "--num_workers", "6",
-                // "--useallfeatures",
-                // "-adv", 
-                // "-ladv", "0.001",
-                "--seed", "1612",
-                "-gc", "0.01",
-                // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1110_933/last_model.pth",
-                "--supmode", "weaksup",
-                "--lam_weak", "100",
-                // "--supmode", "unsup",
-                // "--no_opt"
-                "--nomain",
-                // "--weak_merge_aug",
-                // "--max_weak_samples", "8",
-                "--val_every_n_epochs", "1",
-                // "--val_every_n_epochs", "100",
-                "--weak_batch_size", "8",
-                "--occupancymodel",
-                "--buildinginput",
-                "--sentinelbuildings",
-                "--gradientaccumulation"
-                // "--optimizer", "SGD",
-                // "--weightdecay", "0.000001",
-                // "--eu2rwa" 
-            ]
-        },
-        {
-            "name": "train, boostUNet_4_1, weak_train, rwa",
-            "type": "python",
-            "request": "launch",
-            "program": "run_train.py",
-            "console": "integratedTerminal",
-            "justMyCode": false,
-            "args": [
-                "-o",
-                "-s",
-                // "--max_samples", "200",
-                "-e",   "150",
-                "-b", "16",
-                // "-lr", "2.5e-6", 
-                // "-lr", "1e-5", 
-                "-lr", "1e-4", 
-                // "--model", "BoostUNet",  
-                "--model", "JacobsUNet",  
-                // "-l", "log_l1_loss", "L1reg", 
-                "-l", "log_l1_loss",
-                // "-la", "1.0", "0.01",
-                "-la", "1.0",
-                "-dw","2",
-                "-dw2","2",
-                "-S2",
-                "-S1",
-                "-NIR",
-                "-f",
-                // "16",
-                "8",
-                // "--dilation", "2",
-                "-rse",
-                "-treg", "rwa",
-                //"-treg", "pricp2",
-                "-tregtrain", "rwa",
-                "-exZH",
-                "-val", "1",
-                "--lr_step", "5",
-                // "--lr_gamma", "0.5",
-                "--lr_gamma", "0.75",
-                "--full_aug",
-                "--num_workers", "6", 
-                "--seed", "1612",
-                "-gc", "0.01",
-                // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1110_933/last_model.pth",
-                "--supmode", "weaksup",
-                "--lam_weak", "100",
-                // "--supmode", "unsup",
-                // "--no_opt"
-                "--nomain",
-                // "--weak_merge_aug",
-                // "--max_weak_samples", "2",
-                "--val_every_n_epochs", "1",
-                // "--test_every_i_steps", "50",
-                // "--val_every_n_epochs", "100",
-                // "--weak_batch_size", "4",
-                "--weak_batch_size", "1",
-                "--occupancymodel",
-                "--buildinginput",
-                "--sentinelbuildings",
-                // "-r77",
-                "--pretrained",
-                "--gradientaccumulation",
-                // "--weightdecay", "0.001"
-                // "--optimizer", "SGD",
-                // "--weightdecay", "0.000001",
-                // "--eu2rwa" 
-            ]
-        },
-        {
             "name": "train, Stage 1, rwa",
             "type": "python",
             "request": "launch",
@@ -729,7 +596,7 @@
                 // "-la", "1.0", "1.0",
                 "-la", "1.0",
                 "-esr2", "0.1", 
-                "-dw","2", 
+                "-dw","3", 
                 "-S2",
                 "-NIR",
                 "-S1",
@@ -767,7 +634,7 @@
                 // "--segmentationinput",
                 "--useposembedding",
                 "--weightdecay_pos", "0.0",
-                "--weightdecay", "0.003",
+                "--weightdecay", "0.0",
                 "--sentinelbuildings",
                 "--train_level", "coarse",
                 // "-r77",
@@ -1278,7 +1145,7 @@
                 // "--max_samples", "200",
                 "-e",   "100",
                 "-b", "16",
-                "-lr", "1e-3", 
+                "-lr", "1e-4", 
                 "--model", "POMELO_module",  
                 "--head", "v3",
                 // "-l", "log_l1_loss", "L1reg", 
@@ -1286,7 +1153,7 @@
                 // "-la", "1.0", "0.01",
                 "-la", "1.0",
                 "-esr2", "0.01",
-                "-dw","1",
+                "-dw","2",
                 "-S2",
                 "-NIR",
                 "-S1",
@@ -1295,7 +1162,7 @@
                 "8",
                 // "--dilation", "2",
                 "-rse",
-                "-treg", "che",
+                "-treg", "rwa", "pricp2",
                 //"-treg", "pricp2",
                 "-tregtrain", "che", "pricp2", "uga",
                 "-exZH",
@@ -1320,7 +1187,7 @@
                 // "--weak_batch_size", "4",
                 "--weak_batch_size", "1",
                 "--occupancymodel",
-                // "--buildinginput",
+                "--buildinginput",
                 // "--segmentationinput",
                 // "--useposembedding",
                 "--weightdecay_pos", "0.0",
@@ -1329,147 +1196,13 @@
                 // "-r77",
                 "--pretrained",
                 // "--gradientaccumulation",
-                "--train_level", "coarse4", "fineTRACTCE", "fine",
+                // "--train_level", "coarse4", "fineTRACTCE", "fine",
+                "--train_level", "coarse4", "fineTRACTCE", "coarse",
                 // "--weak_validation",
                 // "--useposembedding",
                 // "--val_every_i_steps", "1200",
                 // "--test_every_i_steps", "400",
                 "--max_weak_pix", "1000000"
-            ]
-        },
-        {
-            "name": "train, boostUNet_4_1, weak_train, PRI -> rwa",
-            "type": "python",
-            "request": "launch",
-            "program": "run_train.py",
-            "console": "integratedTerminal",
-            "justMyCode": false,
-            "args": [
-                "-o",
-                "-s",
-                // "--max_samples", "200",
-                "-e",   "200",
-                "-b", "16",
-                "-lr", "1e-5", 
-                "--model", "BoostUNet",  
-                // "--model", "JacobsUNet",  
-                "-l",  "log_l1_loss", "L1reg", 
-                "-la", "1.0", "0.01",
-                "-dw","2",
-                "-dw2","2",
-                "-S2",
-                "-S1",
-                "-NIR",
-                "-f",
-                // "16",
-                "8",
-                // "--dilation", "2",
-                "-rse",
-                "-treg", "rwa", "pricp2",
-                //"-treg", "pricp2",
-                "-treg", "rwa", 
-                // "rwa", 
-                // "-tregtrain", "rwa",
-                "-tregtrain", "pricp2",
-                "-exZH",
-                "--val", "1",
-                "--lr_step", "5",
-                // "--lr_gamma", "0.5",
-                "--lr_gamma", "0.75",
-                "--full_aug",
-                "--num_workers", "6", 
-                "--seed", "1612",
-                "-gc", "0.01",
-                // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1110_933/last_model.pth",
-                "--supmode", "weaksup",
-                "--lam_weak", "100",
-                // "--supmode", "unsup",
-                // "--no_opt"
-                "--nomain",
-                // "--weak_merge_aug",
-                // "--max_weak_samples", "8",
-                "--val_every_n_epochs", "1",
-                "--test_every_i_steps", "500",
-                // "--val_every_n_epochs", "100",
-                "--weak_batch_size", "8",
-                "--occupancymodel",
-                "--buildinginput",
-                "--sentinelbuildings",
-                "-r77",
-                "--pretrained",
-                // "--gradientaccumulation",
-                // "--train_level", "fineTRACTCE",
-                "--train_level", "fine",
-                // "--optimizer", "SGD",
-                "--weightdecay_pos", "0.0",
-                // "--weightdecay", "0.000001",
-                // "--eu2rwa" 
-            ]
-        },
-        {
-            "name": "train, boostUNet, debug, gaussian_nll",
-            "type": "python",
-            "request": "launch",
-            "program": "run_train.py",
-            "console": "integratedTerminal",
-            "justMyCode": false,
-            "args": [
-                "-o",
-                "-s",
-                // "--max_samples", "20000",
-                "-e",
-                "200",
-                "-b",
-                "128",
-                "-lr",
-                "1e-4",
-                // "3e-6",
-                "--model", "BoostUNet",
-                // "--model", "JacobsUNet",
-                // "1e-4",
-                "-l",
-                // "log_l1_aug_loss",
-                // "l1_aug_loss",
-                // "log_l1_loss",
-                // "l1_loss",
-                // "log_l1_loss",
-                "log_gaussian_aug_loss",
-                // "laplacian_nll",
-                "--merge_aug", "2",
-                "-la",
-                "1.0",
-                // "0.1",
-                "-dw","4",
-                "-dw2","1",
-                "-S2",
-                "-S1",
-                // "-NIR",
-                "-f",
-                "16",
-                "-rse",
-                "-treg",
-                "pricp2",
-                // "-ladv", "0.01",
-                "-exZH",
-                "--val", "1",
-                "--lr_step", "5",
-                "--lr_gamma", "0.75",
-                "--full_aug",
-                // "--CORAL",
-                // "--lam_coral", "10.0",
-                "--num_workers", "6",
-                // "--useallfeatures",
-                // "--lam_coral", "1.0",
-                // "-adv", 
-                // "-ladv", "0.01",
-                // "--classif", "v8",
-                // "--MMD",
-                // "--lam_mmd", "10.0",
-                "--seed", "1612",
-                "-gc", "0.001",
-                // "--lam_raw", "0.3.",
-                // "--occupancymodel",
-                // "--stochasticWA"
             ]
         },
         {
@@ -1480,15 +1213,22 @@
             "console": "integratedTerminal",
             "justMyCode": true,
             "args": [
-                "--model", "BoostUNet",
-                "-dw", "4",
+                "--model", "POMELO_module",
+                "--head", "v3",
+                "--grouped",
+                "--occupancymodel",
+                "--buildinginput",
+                "--useposembedding",
+                "--sentinelbuildings",
+                "-dw","3",
                 "-S2",
+                "-NIR",
                 "-S1",
                 // "-NIR",
-                "-f", "16",
+                "-f", "8",
                 "-rse",
-                "-treg", "pricp2",
-                "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_652_125/best_model.pth"
+                "-treg", "pricp2", "rwa",
+                "--resume", "/scratch2/metzgern/Downloads/experiment_288_266/last_model.pth"
             ]
         },
         {
@@ -1510,157 +1250,6 @@
                 "--fourseasons",
                 "-treg", "rwa", "pricp2",
                 "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_905_626/best_model.pth"
-            ]
-        },
-        {
-            "name": "train, smp, finetune",
-            "type": "python",
-            "request": "launch",
-            "program": "run_train.py",
-            "console": "integratedTerminal",
-            "justMyCode": true,
-            "args": [
-                "-o",
-                "-s",
-                // "--max_samples", "20000",
-                "-e",
-                "200",
-                "-b",
-                "128",
-                "-lr",
-                "1e-4",
-                // "1e-4",
-                "-l",
-                "log_l1_aug_loss",
-                // "l1_loss",
-                // "log_l1_loss",
-                // "gaussian_nll",
-                // "laplacian_nll",
-                "--merge_aug", "2",
-                "-la",
-                "1.0",
-                // "100.0",
-                // "-wd", "0.001",
-                // "-lw", "0.1",
-                "-dw",
-                "4",
-                // "-S2",
-                "-S2",
-                "-S1",
-                // "-NIR",
-                "-f",
-                "16",
-                "-rse",
-                "-treg",
-                "pricp2",
-                // "-adv", 
-                // "-ladv", "0.01",
-                // "--classif", "v8",
-                // "--CORAL",
-                // "--lam_coral", "0.000001",
-                // "--MMD",
-                // "--lam_mmd", "0.1",
-                "-exZH",
-                // "--classifier", "v8",
-                "-smo", "weaksup",
-                // "-mws", "10",
-                "--val", "1",
-                "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_584_486/best_model.pth",
-                // "-clasif", "v12",
-                // "-adv",
-                // "-ladv", "0.001",
-                // "--full_aug"
-                // "-wma",
-            ]
-        },
-        {
-            "name": "train, smp, deterministic",
-            "type": "python",
-            "request": "launch",
-            "program": "run_train.py",
-            "console": "integratedTerminal",
-            "justMyCode": true,
-            "args": [
-                "-o",
-                "-s",
-                // "--max_samples", "20000",
-                "-e",
-                "200",
-                "-b",
-                "256",
-                "-lr",
-                "1e-4",
-                // "1e-4",
-                "-l",
-                "l1_loss",
-                "-la",
-                "1.0",
-                // "-wd", "0.001",
-                // "-lw", "0.1",
-                "-dw",
-                "3",
-                // "-S2",
-                "-S1",
-                // "-NIR",
-                "-f",
-                "16",
-                "-rse",
-                "-treg",
-                "pricp2",
-                // "-adv", 
-                // "-ladv", "0.01",
-                // "--classif", "v8",
-                // "--CORAL",
-                // "--lam_coral", "10000.0",
-                // "--MMD",
-                // "--lam_mmd", "0.1",
-                "-exZH",
-                // "--classifier", "v8",
-                // "-smo", "weaksup",
-                // "-mws", "10",
-                "--val", "1",
-                // "-clasif", "v12",
-                // "-adv",
-                // "-ladv", "0.001",
-                // "--full_aug"
-                // "-wma",
-            ]
-        },
-        {
-            "name": "train, smp, bayesian",
-            "type": "python",
-            "request": "launch",
-            "program": "run_train.py",
-            "console": "integratedTerminal",
-            "justMyCode": true,
-            "args": [
-                "-o",
-                "-s",
-                // "--max_samples", "20000",
-                "-e",
-                "200",
-                "-b",
-                "256",
-                "-lr",
-                "1e-5",
-                // "1e-4",
-                "-l",
-                "gaussian_nll",
-                // "laplacian_nll",
-                "-la",
-                "1.0",
-                "-dw",
-                "4",
-                "-S2",
-                "-S1",
-                // "-NIR",
-                "-f",
-                "16",
-                "-rse",
-                "-treg",
-                "pricp2",
-                "-exZH",
-                "--val", "1",
             ]
         }
     ]
